plugins {
  id "com.microsoft.azure.azurefunctions" version "1.11.0"
}
apply plugin: 'java'
apply plugin: "com.microsoft.azure.azurefunctions"

group 'com.rhcsoft.spring.drools'
version '1.0-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

dependencies {
    implementation 'com.microsoft.azure.functions:azure-functions-java-library:2.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testImplementation 'org.junit-pioneer:junit-pioneer:2.3.0'
    testImplementation 'org.mockito:mockito-core:5.15.2'
}


repositories {
    mavenCentral()
}

azurefunctions {
    resourceGroup = 'java-functions-group'
    appName = 'function-blob-listener-1740487884863'
    pricingTier = 'Consumption'
    region = 'westus'
    runtime {
      os = 'windows'
      javaVersion = '21'
    }
    localDebug = "transport=dt_socket,server=y,suspend=n,address=5005"
}

test {
    useJUnitPlatform()
    jvmArgs += [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
    ]
}